<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use App\Enums\DocumentStatus;

class Document extends Model
{
    use HasFactory;

    protected $fillable = [
        'original_filename',
        'file_path',
        'mime_type',
        'file_size',
        'doc_type',
        'status',
        'error_message',
        'user_id',
        'validated_by',
        'validated_at',
    ];

    protected $casts = [
        'status' => DocumentStatus::class,
        'file_size' => 'integer',
        'validated_at' => 'datetime',
    ];

    public function user()
    {
        return $this->belongsTo(User::class);
    }
    public function aiRequests()
    {
        return $this->hasMany(AiRequest::class);
    }

    public function extractions()
    {
        return $this->hasMany(Extraction::class);
    }

    public function fieldCorrections()
    {
        return $this->hasMany(FieldCorrection::class);
    }

}